# Stopwatch-Micro

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  fetch_repos.py  repos.json  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: clang-format-check.yml  firmware-build.yml  pages.yml
docs/: architecture.md  validation.md
main/: CMakeLists.txt  idf_component.yml  main.cpp  system_config.h
main/apps/app_codex_micro/: app_codex_micro.cpp  app_codex_micro.h
main/apps/app_codex_micro/view/: view.cpp  view.h
main/apps/common/: common.h
main/apps/common/audio/: audio.cpp  audio.h
main/apps/common/key_manager/: key_manager.cpp  key_manager.h
main/assets/fonts/: CommissionerMedium108.c  CommissionerMedium64.c
main/debug/: serial_debug.cpp  serial_debug.h
main/hal/: hal.cpp  hal.h  hal_audio.cpp  hal_button.cpp  hal_display.cpp  hal_ioe.cpp  hal_pmic.cpp
main/hal/ble/: codex_micro_ble.cpp  codex_micro_ble.h  codex_micro_protocol.h  hid_gatt_compat.cpp
main/hal/drivers/cst820/: cst820.cpp
tools/: package_release.py  serial_debug_test.py
web/: index.html
